--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Mymo CMS",
     "keywords": [],
     "license": "MIT",
-    "homepage": "https://cms.juzaweb.com",
+    "homepage": "https://juzaweb.com/cms",
     "require": {
         "php": "^7.2.5|^8.0"
     },
